<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".inputalert">


    <EditText
        android:id="@+id/edtext_father"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:ems="10"
        android:gravity="center|right|center_horizontal|center_vertical"
        android:inputType="textPersonName"
        android:maxLength="25"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/txtmobileview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edtext_lname"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:ems="10"
        android:gravity="right|center_horizontal|center_vertical"
        android:inputType="textPersonName"
        android:maxLength="50"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/ac_start_btn_submit"
        android:layout_width="230dp"
        android:layout_height="46dp"
        android:layout_marginBottom="16dp"
        android:text="@string/txtsing"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edtext_phone"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:layout_marginBottom="308dp"
        android:ems="10"
        android:gravity="center|left"
        android:inputType="phone"
        android:maxLength="11"
        android:numeric="integer"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/ac_start_btn_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edtext_name"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:ems="10"
        android:gravity="center|right|center_horizontal|center_vertical"
        android:inputType="textPersonName"
        android:maxLength="25"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/txtmobileview"
        android:layout_width="330dp"
        android:layout_height="35dp"
        android:foregroundGravity="left|bottom"
        android:gravity="center|left|center_vertical|end"
        android:text="@string/txt4"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/edtext_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="330dp"
        android:layout_height="35dp"
        android:gravity="center|right|center_horizontal|center_vertical"
        android:text="@string/txt2"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/edtext_lname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="330dp"
        android:layout_height="35dp"
        android:gravity="center|right|center_horizontal|center_vertical"
        android:text="@string/txt3"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/edtext_father"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/ac_start_rg"
        android:layout_width="77dp"
        android:layout_height="94dp"
        android:layout_marginTop="360dp"
        android:gravity="right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.406"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radio_men"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt55"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/radio_women"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt56"
            android:textSize="12sp"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="125dp"
        android:layout_height="36dp"
        android:gravity="center_horizontal|left|center_vertical"
        android:text="@string/txt5"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ac_start_rg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.572" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="330dp"
        android:layout_height="35dp"
        android:gravity="center|right|center_horizontal|center_vertical"
        android:text="@string/txt1"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/edtext_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Spinner
        android:id="@+id/sp_list"
        android:layout_width="208dp"
        android:layout_height="50dp"
        android:layout_marginBottom="128dp"
        app:layout_constraintBottom_toTopOf="@+id/ac_start_btn_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <CheckBox
        android:id="@+id/chb3"
        android:layout_width="133dp"
        android:layout_height="35dp"
        android:layout_marginTop="72dp"
        android:text="@string/txt88"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_list"
        tools:ignore="TouchTargetSizeCheck" />

    <CheckBox
        android:id="@+id/chb4"
        android:layout_width="133dp"
        android:layout_height="35dp"
        android:layout_marginTop="72dp"
        android:text="@string/txt90"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.766"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_list"
        tools:ignore="TouchTargetSizeCheck" />

    <CheckBox
        android:id="@+id/checkBox7"
        android:layout_width="133dp"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:text="علاقمند به سرود"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.766"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_list"
        tools:ignore="TouchTargetSizeCheck,DuplicateClickableBoundsCheck" />

    <CheckBox
        android:id="@+id/chb2"
        android:layout_width="133dp"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:text="@string/txt89"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.766"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_list"
        tools:ignore="TouchTargetSizeCheck" />

    <CheckBox
        android:id="@+id/chb1"
        android:layout_width="133dp"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:text="@string/txt77"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_list"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:text="@string/txt7"
        app:layout_constraintBottom_toTopOf="@+id/ac_start_btn_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.188"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtsp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="invisible" />


</androidx.constraintlayout.widget.ConstraintLayout>